// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList should render 1`] = `
<nav
  className="sc-bczRLJ cVndyS"
>
  <h2>
    Coffee
  </h2>
  <ul>
    <li
      className="product-name"
    >
      <a
        href="/product?product=Caffe%20Latte"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Caffe Latte
         
        0
      </a>
    </li>
    <li
      className="product-name"
    >
      <a
        href="/product?product=Americano"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Americano
         
        (
        1
         
        file
        )
      </a>
    </li>
    <li
      className="product-name"
    >
      <a
        href="/product?product=Flat%20White"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Flat White
         
        (
        -1
         
        files
        )
      </a>
    </li>
    <li
      className="product-name"
    >
      <a
        href="/product?product=Mocha"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Mocha
         
        (
        9999999
         
        files
        )
      </a>
    </li>
    <li
      className="product-name"
    >
      <a
        href="/product?product=Cafe%20Creme"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cafe Creme
         
        (
        -9999999
         
        files
        )
      </a>
    </li>
  </ul>
</nav>
`;

exports[`ProductList should render error message 1`] = `
<nav
  className="sc-bczRLJ cVndyS"
>
  <p
    className="sc-gsnTZi dPidEJ"
  >
    Sorry - the site is experiencing technical issues right now. Please try again later.
  </p>
</nav>
`;

exports[`ProductList should render loading message 1`] = `
<nav
  className="sc-bczRLJ cVndyS"
>
  <h2>
    Coffee
  </h2>
  <ul>
    <li>
      Loading results...
    </li>
  </ul>
</nav>
`;
